# data-engineering-zoomcamp-2026-05-data-platforms

./: .gitignore  README.md  TUTORIAL.md  run-trips.sh
pipeline/: pipeline.yml
pipeline/assets/ingestion/: payment_lookup.asset.yml  pyproject.toml  requirements.txt  trips.py
pipeline/assets/staging/: trips.sql
